--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@
 }
 
 
-#banner{
+.banner{
     height: 400px;
     width: 800px;
+    
 }
 li a{
     text-decoration: none;
-    color: white;
+    color: #ffffff;
     font-size: 20px;
     padding: 20px;
 
@@ -25,9 +26,16 @@ ul{
 
 li{
 
-list-style: none; /*remove os pontoa*/
+list-style: none; /*remove os pontos*/
+}
+nav{
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
 }
+
 
 #logo{
 
