--- a/style.css
+++ b/style.css
@@ -1,17 +1,23 @@
 *{
-    background-color: #1a1a1a;
+   
     padding: 0;
     margin: 0;
 
 }
 
-
+body
+{ background-color: #1a1a1a;}
 .banner{
     height: 400px;
     width: 850px;
     background-image: url("./assents/banner.png"); /*ele adiciona uma imagem de fundo*/
     background-repeat:no-repeat ;
     background-size: cover;
+    display: flex;
+    align-items: center;
+  
+    
+    
 
 }
 li a{
@@ -50,4 +56,33 @@ nav{
 .bi{
      font-size: 35px;
      color: #4c544c;
+
 }
+
+.texto-banner{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 20px;
+    
+    
+    
+
+    
+    
+}
+.button{
+
+   width: 130px;
+   height: 30px;
+   color: #ffffff;
+   border-radius: 55px; /*deixa a borda redonda*/
+   border: none; /*serve oara remover a borda*/
+   font-weight: bold;
+   font-size: 19px;
+   background-color: #333333;
+   
+
+
+}
+
