--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ nav{
     color: #ffffff;
     font-size: 20px;
     padding: 20px;
+
     
     
     
@@ -78,10 +79,11 @@ nav{
    height: 30px;
    color: #ffffff;
    border-radius: 55px; /*deixa a borda redonda*/
-   border: none; /*serve oara remover a borda*/
+   border: none; /*serve para remover a borda*/
    font-weight: bold;
    font-size: 19px;
    background-color: #333333;
+   margin: 20px;
    
 
 
@@ -90,6 +92,7 @@ nav{
 .banner-estrutura{
     
     width: 220px;
+    padding: 30px;
     
     
 }
@@ -100,3 +103,56 @@ nav{
     justify-content: center;
     
 }
+.titulo
+{
+
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 35px;
+}
+.estrutura-titulo{
+
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    
+}
+.produtos{
+    height: 380px;
+    width: 250px;
+}
+.valor{
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 30px;
+    
+    
+}
+.card-texto{
+    display: flex;
+    justify-content: center;
+    
+}
+.card{
+    width: 250px;
+    height: 430px;
+}
+.cores{
+    height: 15px;
+    width: 15px;
+    border-radius: 100%; /*deixar a borda redonda*/
+    
+
+}
+.vermelho{
+    background-color: red;
+
+}
+.azul{
+ background-color: blue;
+
+}
+.laranja{
+    background-color: orange;
+}
+
