--- a/style.css
+++ b/style.css
@@ -1,224 +1,227 @@
-*{
-   
-    padding: 0;
-    margin: 0;
-
-}
-
-body
-{ background-color: #1a1a1a;}
-.banner{
-    height: 400px;
+*{ 
+    padding: 0%;
+    margin: 0%;
+    }
+    
+    body{
+        background-color: #1a1a1a;
+    }
+    
+    .banner{
+    height: 450px;
     width: 850px;
-    background-image: url("./assents/banner.png"); /*ele adiciona uma imagem de fundo*/
-    background-repeat:no-repeat ;
+    background-image: url("./assents/banner.png"); /*ele adiciona uma imagem como fundo*/
+    background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
   
+    }
     
-    
-
-}
-li a{
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 20px;
-
-}
-
-ul{
-    display: flex; /*ativa a propriedade de alinhamento*/
-    flex-direction: row; /*coloca os ele*/
-}
-
-li{
-
-list-style: none; /*remove os pontos*/
-}
-nav{
-
+    li a{
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 20px;
+        padding: 25px;
+     }
+    ul{
+        display: flex; /*ativa a propriedade de alinhamento*/
+        flex-direction: row; /*coloca os elementos na horizontal*/
+    }
+    li{
+    list-style: none; /*remove os pontos das lista*/
+    }
+    nav{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-
-}
-
-
-#logo{
-
-    height: 100px;
-    width: 100;
+    }
+     #logo{
+    height: 120px;
+    width: 120px;
+     }
+     .bi{
+    font-size: 40px;
+    color: #4c544c;
+     }
+     .texto-banner{
+        color: #ffffff;
+       font-size: 25px;
+     }
+     .btn{
+        height: 45px;
+        width: 115px;
+        border-radius: 55px;/*Deixa a  borda redonda*/
+        border: none; /*Serve para remover a borda*/
+        color: #ffffff;
+        font-size: 19px;
+        background-color: #333333;
+        margin: 30px;/*distancia o botao do texto*/
+     }
+     
+     .banner-estrutura{
+        width: 220px;
+        margin: 30px;
+     }
+     .section-banner {
+        display: flex;
+        justify-content: center;  /* Centraliza horizontalmente */
+        padding: 40px 0;   /* Mantém espaço ao redor */
+        }
+        .titulo {
+       color: #ffffff;
+       font-size: 35px;
+       font-weight: bold;
+       }
+        .estrutura-titulo{
+       justify-content: center;
+       display: flex;
+       padding: 30px;
+      }
+      .produtos{
+       height: 380px;
+       width: 250px;
+      }
+      .valor{
+       color: #ffffff;
+       font-weight: bold;
+       font-size: 30px;
+      }
+      .card{
+       width: 250px;
+       height: 430px;
+      }
+      .card-texto{
+       justify-content: center;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+      }
+      .cores{
+       height: 20px;
+       width: 15px;
+       border-radius: 50%;
+      }
+      .vermelho{
+       background-color: rgb(165, 42, 42);
+      }
+      .azul{
+       background-color: blue;
+      }
+      .amarelo{
+       background-color: chartreuse;
+      }
+     .caixa-cores{
+      flex-direction: row;
+       display: flex;
+       padding: 5px;
+       gap: 5px;
     
-}
-
-.bi{
-     font-size: 35px;
-     color: #4c544c;
-
-}
-
-.texto-banner{
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 20px;
-
+     }
+       .produtos2{
+       height: 380px;
+       width: 250px;
+      }
+      .valor{
+       color: #ffffff;
+       font-weight: bold;
+       font-size: 30px;
+      }
+      .card2{
+       width: 250px;
+       height: 430px;
+      }
+      .card-texto2{
+       justify-content: center;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+      }
+      .cores2{
+       height: 20px;
+       width: 15px;
+       border-radius: 50%;
+      }
+      .vermelho{
+       background-color: brown;
+      }
+      .azul{
+       background-color: blue;
+      }
+      .amarelo{
+       background-color: chartreuse;
+      }
+     .caixa-cores2{
+      flex-direction: row;
+       display: flex;
+       padding: 5px;
+       gap: 5px;
+       }
+         .produtos3{
+       height: 380px;
+       width: 250px;
+      }
+      .valor{
+       color: #ffffff;
+       font-weight: bold;
+       font-size: 30px;
+      }
+      .card3{
+       width: 250px;
+       height: 430px;
+      }
+      .card-texto3{
+       justify-content: center;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       
+      }
+      .cores2{
+       height: 20px;
+       width: 15px;
+       border-radius: 50%;
+      }
+      .vermelho{
+       background-color: brown;
+      }
+      .azul{
+       background-color: blue;
+      }
+      .amarelo{
+       background-color: chartreuse;
+      }
+     .caixa-cores3{
+      flex-direction: row;
+       display: flex;
+       padding: 5px;
+       gap: 5px;
+     }
+     .carousel {
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        gap: 30px; 
+        padding-bottom: 50px; 
+        }
     
+        .xbox{
+        height: 450px;
+        width: 850px;
+        background-image: url("./assents/x-box.png"); /*ele adiciona uma imagem como fundo*/
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: flex;
+        justify-content: end;       
+        }
+        .texto-xbox{
+            color: #ffffff;
+            font-size: 30px;
+            font-weight: 700;
+            
+
+        }
+        
     
-    
-
-    
-    
-}
-.button{
-
-   width: 130px;
-   height: 30px;
-   color: #ffffff;
-   border-radius: 55px; /*deixa a borda redonda*/
-   border: none; /*serve para remover a borda*/
-   font-weight: bold;
-   font-size: 19px;
-   background-color: #333333;
-   margin: 20px;
-   
-
-
-}
-
-.banner-estrutura{
-    
-    width: 220px;
-    padding: 30px;
-    
-    
-}
-
-.section-banner
-{
-    display: flex;
-    justify-content: center;
-    
-}
-.titulo
-{
-
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 35px;
-}
-.estrutura-titulo{
-
-    display: flex;
-    justify-content: center;
-    padding: 30px;
-    
-}
-.produtos{
-    height: 380px;
-    width: 250px;
-}
-.valor{
-    color: #ffffff;
-    font-weight: bold;
-    font-size: 30px;
-    
-    
-}
-.card-texto{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.card{
-    width: 250px;
-    height: 430px;
-}
-.cores{
-    height: 15px;
-    width: 15px;
-    border-radius: 100%; /*deixar a borda redonda*/
-    padding: 5px;
-
-}
-.vermelho{
-    background-color: red;
-
-}
-.azul{
- background-color: blue;
-
-}
-.laranja{
-    background-color: orange;
-}
-
-.caixa-cores{
-
-    display: flex;
-    flex-direction: row;
-    padding: 5px;
-    
-
-}
-.carousel{
-
-   display: flex;
-   justify-content:center;
-   align-items: center;
-   flex-direction: row;
-   gap: 20px;
-
-
-}
-
-
-body
-{ background-color: #1a1a1a;}
-
-nav{
-
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 800px;
-    width: 300px;
-    margin-inline-start: 30px;
-}
-
-.texto-xbox{
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 20px;
-    padding: 10px;
-    height: 20px;
-    width: 250px;
-
-    
-    
-    
-}
-.butão{
-
-   width: 120px;
-   height: 30px;
-   color: #ffffff;
-   border-radius: 55px; /*deixa a borda redonda*/
-   border: none; /*serve para remover a borda*/
-   font-weight: bold;
-   font-size: 19px;
-   background-color: #333333;
-   margin: 20px;
-   flex-direction: column;
-   margin-inline-start: 200px;
-}
-.estrutura-xbox{
-    width: 800px;
-    height: 200px;
-    padding: 30px;
-   
-}
+      
